# starling

./: .editorconfig  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLA.md  CLAUDE.md  CLA_ASSISTANT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  LICENSE  NOTICE  README.md  Starling.sln  Starling.slnx  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  aspire.config.json  codecov.yml  layer-tree-plan.md  nuget.config
.claude/plans/: my-designer-has-completed-linear-rainbow.md
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cla.yml  fork-ci.yml  pages.yml
Starling.AppHost/: AppHost.cs  Starling.AppHost.csproj
Tessera.AppHost/: AppHost.cs  Tessera.AppHost.csproj
bench/: README.md  benchmarks.md  engine-comparison.md  html-parser-comparison.md
bench/Starling.Bench/: AnimationBench.cs  AnimationTraceProgram.cs  CompositorBench.cs  CssBench.cs  EndToEndBench.cs  Fixtures.cs  GitHubStyleBench.cs  GitHubStyleSmoke.cs  H1ResponseBench.cs  HtmlBench.cs  IncrementalLayoutBench.cs  JsBench.cs  LayoutBench.cs  PaintBench.cs  Program.cs  RasterBench.cs  SsimBench.cs  Starling.Bench.csproj  StyleBench.cs  StyleInvalidationBench.cs  TextRasterBench.cs  UrlBench.cs  WebGpuFrameBench.cs
bench/Starling.HtmlParserBench/: Fixtures.cs  HtmlParserComparisonBench.cs  Program.cs  Starling.HtmlParserBench.csproj
bench/Starling.Js.AllocationBench/: Program.cs  Starling.Js.AllocationBench.csproj
bench/Starling.JsEngineBench/: EngineComparisonBench.cs  Program.cs  ScriptSuiteBench.cs  Starling.JsEngineBench.csproj  StarlingFeatureBench.cs  StarlingScalingBench.cs
bench/Starling.RegExp.Benchmarks/: Program.cs  RegexCompileBenchmarks.cs  RegexFlagBenchmarks.cs  RegexMatchBenchmarks.cs  Starling.RegExp.Benchmarks.csproj
browser-plan/: 00_INDEX.md  01_ARCHITECTURE.md  02_PROJECT_SETUP.md  03_NETWORKING.md  04_HTML_PARSING.md  05_DOM.md  06_CSS.md  07_LAYOUT.md  08_FONTS_PAINT.md  09_JS_ENGINE.md  10_WEB_APIS.md  11_AVALONIA_SHELL.md  12_TESTING.md  13_MILESTONES.md  14_AGENT_TASKS.md  anglesharp-backend-plan.md  compositor-thread-scope.md  scroll-model.md
browser-plan/incremental-layout/: PHASE0_STATUS.md  PHASES_1_5_STATUS.md
design/: HANDOFF.md  app.jsx  chrome.jsx  devtools.jsx  index (2).html  theme.css
docs/: PROJECT_STRUCTURE.md  animation-relayout-perf.md  approach.md  mcp.md  native-shell.md  rendering-present-paths.md
native/: README.md  build-skia.sh
native/shim/: CMakeLists.txt  smoke_test.c  tessera_skia.cpp  tessera_skia.h
site/: README.md  index.html
site/css/: styles.css
sites/: README.md
sites/todo/: index.html
sites/words/: index.html
spikes/Starling.BlazorStatusIsland/: App.razor  Program.cs  Starling.BlazorStatusIsland.csproj  StatusIsland.razor  _Imports.razor
src/Starling.AppHost/: AppHost.cs  Starling.AppHost.csproj
src/Starling.Bindings/: AnimationFrameBinding.cs  CookieBinding.cs  CoreWebApiBinding.cs  CryptoBinding.cs  CssBinding.cs  CssomBinding.cs  DomExceptionBinding.cs  DomTokenListObject.cs  DomWrappers.cs  EventTargetBinding.cs  FetchBinding.cs  FontFaceBinding.cs  HistoryBinding.cs  HtmlCollectionObject.cs  IFrameBinding.cs  IdlMarshal.cs  LayoutHost.cs  NodeBindings.cs  NodeListObject.cs  PerformanceBinding.cs  PlaceholderNote.cs  QuerySelectorEngine.cs  RangeBinding.cs  ScriptSrcHook.cs  ScrollEventDispatcher.cs  SelectionBinding.cs  Starling.Bindings.csproj  StorageBinding.cs  TimersBinding.cs  TraversalBinding.cs  WebAnimationsBinding.cs  WebAssemblyBinding.cs  WindowBinding.cs  XhrBinding.cs
src/Starling.Bindings.Jint/: AnimationFrameBinding.cs  AttrBinding.cs  BlobFileFormDataBinding.cs  CollectionsBinding.cs  ConsoleBinding.cs  CookieBinding.cs  CoreWebApiBinding.cs  CryptoBinding.cs  CssBinding.cs  CssomBinding.cs  DomExceptionBinding.cs  EncodingBinding.cs  EventTargetBinding.cs  FetchBinding.cs  FontFaceBinding.cs  HistoryBinding.cs  IFrameBinding.cs  JintBackendContext.cs  JintBindings.cs  JintDomWrapper.cs  JintDynamicScriptRunner.cs  JintInterop.cs  JintScriptSession.cs  ModuleLoader.cs  MutationObserverBinding.cs  NodeBindings.cs  ObserversBinding.cs  PerformanceBinding.cs  RangeBinding.cs  SelectionBinding.cs  Starling.Bindings.Jint.csproj  StorageBinding.cs  TimersBinding.cs  TraversalBinding.cs  UrlBinding.cs  WebAnimationsBinding.cs  WebAssemblyBinding.cs  WindowBinding.cs  XhrBinding.cs
src/Starling.Codecs/: IImageDecoder.cs  ImageDecodeException.cs  ImageFormat.cs  NativeImageDecoder.cs  Starling.Codecs.csproj
src/Starling.Common/: Maybe.cs  Result.cs  Starling.Common.csproj
src/Starling.Css/: PlaceholderNote.cs  Starling.Css.csproj  StyleOrigin.cs
src/Starling.Dom/: Attr.cs  AttrNode.cs  Document.cs  DocumentFragment.cs  DocumentType.cs  DomException.cs  DomRange.cs  DomSelection.cs  DomTokenList.cs  Element.cs  HtmlFormControls.cs  HtmlTemplateElement.cs  LayoutMutation.cs  LiveElementCollection.cs  NamedNodeMap.cs  Node.cs  NodeClone.cs  NodeKind.cs  Starling.Dom.csproj  Text.cs
src/Starling.Engine/: BoxLayoutHost.cs  BrowserSession.cs  DynamicScriptRunner.cs  Engine.cs  EngineAnimationHost.cs  EngineModuleHost.cs  FontFaceFetcher.cs  HtmlBackendSelector.cs  ImageFetcher.cs  InlineSvgSerializer.cs  JsEngineSelector.cs  LaidOutPage.cs  NavigationHistory.cs  PageScripting.cs  ScriptFetcher.cs  Srcset.cs  Starling.Engine.csproj  StarlingEngineServiceCollectionExtensions.cs  StylesheetFetcher.cs
src/Starling.Gui/: App.axaml  App.axaml.cs  BoxHitTester.cs  Info.plist  MacDockIcon.cs  MainWindow.cs  (+4 more)
src/Starling.Gui.Avalonia/: App.axaml  App.axaml.cs  BoxHitTester.cs  LinkResolver.cs  MainWindow.cs  PageRendererHost.cs  Program.cs  SelectionModel.cs  Starling.Gui.Avalonia.csproj  UrlBarInputNormalizer.cs
src/Starling.Gui.Core/: Starling.Gui.Core.csproj
tasks/: INDEX.md  README.md  SCHEMA.md  SITE_STYLING_PLAN.md  SPEC_CATALOG.md  SPEC_COVERAGE.md  SPEC_READY_TO_PROMOTE.md  logging-ilogger-t-spec.md  logging-migration-spec.md  logging-migration-tests-spec.md
testdata/: entities-demo.html
tools/: fetch-test262.sh  fetch-wpt.sh  publish-blazor-status-island.sh
(+1995 files in other folders)
